# DoodleSavik

./: .gitignore  CMakeLists.txt
src/: assets_p.c  assets_p.h  config.h  main.c
src/common/: object_size.h  point.c  point.h  rect_t.c  rect_t.h  s_random.c  s_random.h  vec2.h
src/objects/: assets_controller.c  assets_controller.h  audio_controller.c  audio_controller.h  background.c  background.h  blocks_controller.c  blocks_controller.h  jumpers_controller.c  jumpers_controller.h  player.c  player.h  world.c  world.h
